--- a/SPP/parser/Parser_WF/ParserLib/ParserLib.csproj
+++ b/SPP/parser/Parser_WF/ParserLib/ParserLib.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Core\" />
+    <PackageReference Include="AngleSharp" Version="0.9.9" />
   </ItemGroup>
 
 </Project>
