--- a/SPP/parser/Parser_WF/ParserLib/ParserLib.csproj
+++ b/SPP/parser/Parser_WF/ParserLib/ParserLib.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="AngleSharp" Version="0.9.9" />
+    <PackageReference Include="System.Net.Http" Version="4.1.1" />
   </ItemGroup>
 
 </Project>
