--- a/SPP/parser/Parser_WF/ClassLibrary1/ParserLib.csproj
+++ b/SPP/parser/Parser_WF/ClassLibrary1/ParserLib.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Core\IParser.cs" />
     <Compile Include="Core\IParserSetting.cs" />
     <Compile Include="Core\ParserWorker.cs" />
+    <Compile Include="Core\ParserWorkerAPI.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="siteBank\BankParser.cs" />
     <Compile Include="siteBank\BankSetting.cs" />
